<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="Droid_Desserts"> Droid Desserts</string>
    <string name="Choose"> Choose a dessert</string>
    <string name="Donut_Text"> Donuts are glazed and sprinkled with candy</string>
    <string name="Ice_Cream_Text">Ice cream sandwiches hace chocolate wafers and vainilla filling </string>
    <string name="Fro_yo">FroYo is premium self-serve frozen yogurt </string>
    <string name="title_activity_choose_method">choose_method</string>
    <string name="choose_a_method">Choose a devilery method</string>
    <string name="Same">Same day messenger service</string>
    <string name="Next">Next day ground delivery</string>
    <string name="Pick">Pick up</string>





</resources>
